# data-engineering-roadmap

./: .gitignore  README.md  main.py
Bootcamp-DBT-Core/aula02/: pyproject.toml
Bootcamp-DBT-Core/aula02/northwind_aws/: dbt_project.yml
Bootcamp-DBT-Core/aula02/northwind_aws/models/marts/: vendas.sql
Bootcamp-DBT-Core/aula02/northwind_aws/models/raw/crm/: raw_crm__nova_tabela.sql
Bootcamp-DBT-Core/aula02/northwind_aws/models/staging/: stg_crm__nova_tabela.sql
Bootcamp-DBT-Core/aula02/northwind_aws/seeds/: nova_tabela.csv  region.csv
Bootcamp-Intensivo-Python/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Bootcamp-Intensivo-Python/Aula01/: desafio.py  pyproject.toml
Bootcamp-Intensivo-Python/Aula02/: README.md
Bootcamp-Intensivo-Python/Aula02/Exercicios/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py  exercicio_16.py  exercicio_17.py  exercicio_18.py  exercicio_19.py  exercicio_20.py  exercicio_21.py  exercicio_22.py  exercicio_23-1.py  exercicio_23.py  exercicio_24.py  exercicio_25.py
Bootcamp-Intensivo-Python/BoasVindas01/: README.md
Bootcamp-Intensivo-Python/BoasVindas01/Bootcamp-Intensivo-Python/Aula01/: README.md
Bootcamp-Intensivo-Python/BoasVindas01/Bootcamp-Intensivo-Python/Aula02/: exercicios.py
Bootcamp-Intensivo-Python/BoasVindas01/Bootcamp-Intensivo-Python/Aula02/Exercicios/: exercicio_04.py  exercicio_05.py  exercicio_08.py  exercicio_09.py  exercicio_20.py  exercicio_23-1.py
Bootcamp-Intensivo-Python/BoasVindas01/Bootcamp-Intensivo-Python/projeto_pandas/: pyproject.toml
Bootcamp-Intensivo-Python/BoasVindas01/Bootcamp-Intensivo-Python/projeto_streamlit/: pyproject.toml
Bootcamp-Intensivo-Python/aula01/: desafio.py  exemplo_00.py  exemplo_02.py
Bootcamp-Intensivo-Python/aula02/: desafio.py
Bootcamp-Intensivo-Python/aula02/Exercicios/: exercicio_01.py  exercicio_02.py  exercicio_06.py  exercicio_07.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_16.py  exercicio_19.py  exercicio_23.py
Bootcamp-Intensivo-Python/aula03/: desafio.py
Bootcamp-Intensivo-Python/aula03/exercicios/: .gitignore  exercicio01.py  exercise02.py  exercise03.py  exercise04.py  exercise05-force.py  exercise05.py  exercise06-force.py  exercise06.py  exercise07.py  exercise08.py  exercise09.py  exercise10.py  exercise11.py  exercise12.py  exercise13.py  exercise14.py  exercise15.py
Bootcamp-Intensivo-Python/aula03/exercicios/.exercise07/: pyvenv.cfg
Bootcamp-Intensivo-Python/aula04/: aula_algoritmo.py  challenge.py  data_science.py  example.csv  exercise_csv.py  list_example.py  main.py  readme.md
Bootcamp-Intensivo-Python/aula04/exercicios/: exercise01.py  exercise02.py
Bootcamp-Intensivo-Python/aula05/: .gitignore  create_measurements.py  readme.md  using_genos.cpp  using_pandas.py  using_pandas2.0.py
Bootcamp-Intensivo-Python/aula05/One-Billion-Row-Challenge-Python/src/: using_python.py
Bootcamp-Intensivo-Python/aula06/: main.py  readme.md
Bootcamp-Intensivo-Python/aula07/: etl.py  exercise01.py  exercise02.py  input_valores.py  main.py  vendas.csv
Bootcamp-Intensivo-Python/aula07/exerccises/: exercise03.py
Bootcamp-Intensivo-Python/aula07/exercises/: exercise01.py  exercise02.py  exercise03.py  exercise04.py  exercise05.py  exercise06.py  input_valores.py
Bootcamp-Intensivo-Python/aula08/: etl.py  pipeline.py  pyproject.toml
Bootcamp-Intensivo-Python/aula09/: etl.py  exemplo_00.py  pyproject.toml  utils_log.py
Bootcamp-Intensivo-Python/aula11/01-basico/: class.py  functional.py
Bootcamp-Intensivo-Python/aula11/02-encapsulamento/: conexao.py  encaps.py  postgre.py  sqlite.py
Bootcamp-Intensivo-Python/aula11/03-heranca/: etl.py
Bootcamp-Intensivo-Python/aula11/04-polimorfismo/: overload.py  override.py
Bootcamp-Intensivo-Python/aula11/05-GettereSetter/: basico.py  decorator.py
Bootcamp-Intensivo-Python/aula12/: csv_test.py  pyproject.toml  use_class.py
Bootcamp-Intensivo-Python/aula12/src/interface/classes/: csv_class.py
Bootcamp-Intensivo-Python/aula13-14/: pyproject.toml
Bootcamp-Intensivo-Python/aula13-14/src/: __main__.py  parquet_data_gen.py
Bootcamp-Intensivo-Python/aula13-14/src/lib/classes/: DbSource.py  JsonSource.py  ParquetSource.py  XmlSource.py
Bootcamp-Intensivo-Python/aula15/Collector /: main.py
Bootcamp-Intensivo-Python/aula15/Collector /tools/: retry.py
Bootcamp-Intensivo-Python/aula15/Collector /tools/aws/: client.py
Bootcamp-Intensivo-Python/aula15/FakeApi/: start.py
Bootcamp-Intensivo-Python/aula16/: biblioteca.db  database.db  desafio.py  pyproject.toml
Bootcamp-Intensivo-Python/aula17/: desafio.db  desafio.py  example01_Creating_Database.py  example02_Adding.py  example03_Search.py  example04_searching_using_with.py  meubanco.db  pyproject.toml
Bootcamp-Intensivo-Python/aula18/: exemplo_00.py  pokemon.db  pyproject.toml
Bootcamp-Intensivo-Python/aula18/src/: controller.py  main.py  models.py  pokemon.db  schema.py
Bootcamp-Intensivo-Python/aula19/: database.py  main.py  models.py  produtos.db  pyproject.toml  schema.py
Bootcamp-Intensivo-Python/aula20/: pyproject.toml
Bootcamp-Intensivo-Python/aula20/backend/: Dockerfile  controller.py  database.py  main.py  models.py  router.py  schemas.py
Bootcamp-Intensivo-Python/aula20/frontend/: app.py
Bootcamp-Intensivo-Python/projeto_djando/: pyproject.toml
Bootcamp-Intensivo-SQL/aula15/: pyproject.toml
(+65 files in other folders)
